fix ide plugins

--- a/plugins/cloud9.ide.gittools/package.json
+++ b/plugins/cloud9.ide.gittools/package.json
@@ -2,7 +2,7 @@
     "name": "cloud9.ide.gittools",
     "version": "0.0.1",
 
-    "main": "./auth.js",
+    "main": "./gittools.js",
 
     "plugin": {
         "consumes": [
