--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@ helloworld.js
 .c9revisions
 plugins/cloud9.core/node_modules/
 plugins/cloud9.connect/node_modules/
+plugins/cloud9.ide.run-node/node_modules/
+plugins/cloud9.ide.shell/node_modules/
