extract webdav code into a separate plugin

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@ plugins/cloud9.client.ace/node_modules/
 plugins/cloud9.client.treehugger/node_modules/
 plugins/cloud9.client.v8debug/node_modules/
 plugins/cloud9.static/node_modules/
+plugins-server/cloud9.fs/node_modules/
+node_modules/
+deps/ace/
