--- a/plugins-server/cloud9.client-plugins/package.json
+++ b/plugins-server/cloud9.client-plugins/package.json
@@ -12,7 +12,8 @@
         "provides": ["client-plugins"],
         "consumes": [
             "static",
-            "log"
+            "log",
+            "sourcemint"
         ]
     }
 }
