--- a/plugins-server/cloud9.core/package.json
+++ b/plugins-server/cloud9.core/package.json
@@ -18,6 +18,7 @@
             "connect",
             "http",
             "static",
+            "session",
 
             "client.cloud9"
         ]
