--- a/plugins-server/cloud9.ide.npm/package.json
+++ b/plugins-server/cloud9.ide.npm/package.json
@@ -1,17 +1,15 @@
 {
-    "name": "cloud9.ide.run-node",
+    "name": "cloud9.ide.npm",
     "version": "0.0.1",
 
-    "main": "./run-node.js",
+    "main": "./npm.js",
     "private": true,
 
     "plugin": {
         "consumes": [
             "ide",
             "process-manager",
-            "run-node",
-            "run-node-debug",
-            "ide.ext.state"
+            "run-npm"
         ]
     }
 }
