--- a/plugins-server/cloud9.run.shell/package.json
+++ b/plugins-server/cloud9.run.shell/package.json
@@ -1,15 +1,16 @@
 {
-    "name": "cloud9.ide.shell",
+    "name": "cloud9.run.shell",
     "version": "0.0.1",
 
     "main": "./shell.js",
     "private": true,
 
     "plugin": {
-        "consumes": [
-            "ide",
-            "process-manager",
+        "provides": [
             "run-shell"
+        ],
+        "consumes": [
+            "process-manager"
         ]
     }
 }
