--- a/plugins-client/cloud9.core/package.json
+++ b/plugins-client/cloud9.core/package.json
@@ -11,11 +11,7 @@
         "provides": ["client.cloud9"],
         "consumes": [
             "static",
-            "client.apf",
-
-            "ext.filesystem",
-            "ext.editors",
-            "ext.settings"
+            "client.apf"
         ]
     }
 }
