get user rights from the permissions service

--- a/plugins-server/cloud9.core/package.json
+++ b/plugins-server/cloud9.core/package.json
@@ -15,7 +15,8 @@
             "hub",
             "connect",
             "static",
-            "client.cloud9"
+            "client.cloud9",
+            "workspace-permissions"
         ]
     }
 }
