introduce sandbox plugin

--- a/plugins-server/cloud9.core/package.json
+++ b/plugins-server/cloud9.core/package.json
@@ -16,7 +16,8 @@
             "connect",
             "static",
             "client.cloud9",
-            "workspace-permissions"
+            "workspace-permissions",
+            "sandbox"
         ]
     }
 }
