--- a/plugins-server/cloud9.fs/package.json
+++ b/plugins-server/cloud9.fs/package.json
@@ -18,7 +18,8 @@
         ],
         "consumes": [
             "connect",
-            "workspace-permissions"
+            "workspace-permissions",
+            "sandbox"
         ]
     }
 }
