--- a/plugins-server/cloud9.run.node-debug/package.json
+++ b/plugins-server/cloud9.run.node-debug/package.json
@@ -14,7 +14,8 @@
             "run-node-debug"
         ],
         "consumes": [
-            "process-manager"
+            "process-manager",
+            "sandbox"
         ]
     }
 }
