--- a/plugins-server/cloud9.run.node/package.json
+++ b/plugins-server/cloud9.run.node/package.json
@@ -10,7 +10,8 @@
             "run-node"
         ],
         "consumes": [
-            "process-manager"
+            "process-manager",
+            "sandbox"
         ]
     }
 }
