more transparent sourcemint bundeling

--- a/plugins-client/ext.helloworld/package.json
+++ b/plugins-client/ext.helloworld/package.json
@@ -3,12 +3,5 @@
     "version": "0.0.1",
     "main": "helloworld.js",
     "private": true,
-    "plugin": {
-        "provides": [
-            "ext.helloworld"
-        ],
-        "consumes": [
-            "client-plugins"
-        ]
-    }
+    "bundled": true
 }
