--- a/plugins-server/cloud9.sourcemint/package.json
+++ b/plugins-server/cloud9.sourcemint/package.json
@@ -11,6 +11,7 @@
     "plugin": {
         "provides": ["sourcemint"],
         "consumes": [
+            "log",
             "connect"
         ]
     }
