file-based session store for connect

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ aut.js
 helloworld.js
 .*.gz
 .c9revisions
+.architect/
 .sourcemint/
 plugins/cloud9.core/node_modules/
 plugins/cloud9.connect/node_modules/
