--- a/plugins-server/cloud9.session.file/package.json
+++ b/plugins-server/cloud9.session.file/package.json
@@ -1,10 +1,11 @@
 {
-    "name": "cloud9.session.memory",
+    "name": "cloud9.session.file",
     "version": "0.0.1",
     "main": "session-ext.js",
     "private": true,
 
     "dependencies": {
+        "connect": "1.8.x"
     },
 
     "plugin": {
