split session and session store add event bus plugin

--- a/plugins-server/cloud9.ide.npm/package.json
+++ b/plugins-server/cloud9.ide.npm/package.json
@@ -9,7 +9,8 @@
         "consumes": [
             "ide",
             "process-manager",
-            "run-npm"
+            "run-npm",
+            "eventbus"
         ]
     }
 }
