--- a/plugins-server/cloud9.process-manager/package.json
+++ b/plugins-server/cloud9.process-manager/package.json
@@ -11,6 +11,9 @@
     "plugin": {
         "provides": [
             "process-manager"
+        ],
+        "consumes": [
+            "eventbus"
         ]
     }
 }
