--- a/plugins-server/cloud9.session.memory/package.json
+++ b/plugins-server/cloud9.session.memory/package.json
@@ -8,9 +8,7 @@
     },
 
     "plugin": {
-        "provides": ["session"],
-        "consumes": [
-            "connect"
-        ]
+        "provides": ["session-store"],
+        "consumes": []
     }
 }
