--- a/plugins-server/cloud9.ide.run-node/package.json
+++ b/plugins-server/cloud9.ide.run-node/package.json
@@ -11,7 +11,8 @@
             "process-manager",
             "run-node",
             "run-node-debug",
-            "ide.ext.state"
+            "ide.ext.state",
+            "eventbus"
         ]
     }
 }
