--- a/server/cloud9/ext/shell/package.json
+++ b/server/cloud9/ext/shell/package.json
@@ -28,6 +28,12 @@
                 "[PATH]": {"hint": "path pointing to a folder. Autocomplete with [TAB]"}
             }
         },
-        "pwd": {"hint": "return working directory name"}
+        "pwd": {"hint": "return working directory name"},
+        "mv": {
+            "hint": "move or rename files or directories",
+            "commands": {
+                "[PATH]": {"hint": "path pointing to a folder. Autocomplete with [TAB]"}
+            }
+        }       
     }
 }
