--- a/plugins-server/cloud9.socket/package.json
+++ b/plugins-server/cloud9.socket/package.json
@@ -13,7 +13,8 @@
         "consumes": [
             "http",
             "ide",
-            "session-store"
+            "session",
+            "workspace-permissions"
         ]
     }
 }
