--- a/plugins-server/cloud9.session.file/package.json
+++ b/plugins-server/cloud9.session.file/package.json
@@ -9,7 +9,7 @@
     },
 
     "plugin": {
-        "provides": ["session"],
+        "provides": ["session-store"],
         "consumes": [
             "connect"
         ]
