--- a/plugins-client/cloud9.core/package.json
+++ b/plugins-client/cloud9.core/package.json
@@ -11,7 +11,8 @@
         "provides": ["client.cloud9"],
         "consumes": [
             "static",
-            "client.apf"
+            "client.apf",
+            "lib.requirejs"
         ]
     }
 }
