--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "support/packager"]
     path = support/packager
     url = https://github.com/ajaxorg/packager
+[submodule "support/architect"]
+    path = support/architect
+    url = git://github.com/c9/architect.git
