Add command line parser

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
         
         "v8debug": "0.1.x",
         "treehugger": "0.0.x",
-        "ace": "0.2.x"
+        "ace": "0.2.x",
+
+        "optimist": "~0.3.1"
     },
 
     "repository" : {
