--- a/plugins-server/cloud9.permissions/package.json
+++ b/plugins-server/cloud9.permissions/package.json
@@ -6,6 +6,9 @@
 
     "plugin": {
         "provides": ["workspace-permissions"],
-        "consumes": []
+        "consumes": [
+            "connect",
+            "session"
+        ]
     }
 }
