--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ helloworld.js
 .c9revisions
 .architect/
 .sourcemint/
+/mapped_packages/
 plugins/cloud9.core/node_modules/
 plugins/cloud9.connect/node_modules/
 plugins/cloud9.ide.run-node/node_modules/
