--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "mappings": {
         "ace":          ["npm", "https://github.com/ajaxorg/ace/tarball/498cc1a89d22b6426aeb6589b8934147b69852a7"],
         "apf":          ["npm", "https://github.com/ajaxorg/apf/tarball/8f3ac853d8d5cd9cf82e4bd600aa447c1aaa72b3"],
-        "architect":    ["npm", "https://github.com/c9/architect/tarball/cd253a501d18a6be030c0dc160b0aa8be99fb06e"],
+        "architect":    ["npm", "https://github.com/c9/architect/tarball/57f61714ecac0bf8536315db962b1a88a8dea8b3"],
         "asyncjs":      ["npm", "https://github.com/ajaxorg/async.js/tarball/0b4ed5608a32c280a7690b5f52883d8d1fc0de08"],
-        "jsdav":        ["npm", "https://github.com/ajaxorg/jsDAV/tarball/5e3d927ede95f9e6889569c66fb39a3e6a8b89d7"],
+        "jsDAV":        ["npm", "https://github.com/ajaxorg/jsDAV/tarball/5e3d927ede95f9e6889569c66fb39a3e6a8b89d7"],
         "v8debug":      ["npm", "https://github.com/ajaxorg/lib-v8debug/tarball/c61477136918bda992faf3d4a61834ff680af45c"],
         "treehugger":   ["npm", "https://github.com/ajaxorg/treehugger/tarball/6417527445915e5794e37849a1eeb8a9c6493a75"]
     },
