Initial normal talk with the V8 protocol (set breakpoint, continue, debug UI is shown, but with some bugs) -> with lib-javadebug @ 02af18a7e0e1a520dd370f141e3ac2418c8df7bf

--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "support/packager"]
 	path = support/packager
 	url = https://github.com/ajaxorg/packager
+[submodule "support/lib-javadebug"]
+    path = support/lib-javadebug
+    url = git@github.com:ajaxorg/lib-javadebug.git
