--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
         "socket.io-client": "0.9.x",
         "connect": "1.8.x",
         
-        "gnu-tools": "0.0.x",
         "sourcemint-loader-js": "0.x",
         "sourcemint-platform-nodejs": "0.x",
         "http-error": "~0.0.1",
@@ -31,7 +30,8 @@
         "asyncjs":      ["npm", "https://github.com/ajaxorg/async.js/tarball/0b4ed5608a32c280a7690b5f52883d8d1fc0de08"],
         "jsDAV":        ["npm", "https://github.com/ajaxorg/jsDAV/tarball/5e3d927ede95f9e6889569c66fb39a3e6a8b89d7"],
         "v8debug":      ["npm", "https://github.com/ajaxorg/lib-v8debug/tarball/c61477136918bda992faf3d4a61834ff680af45c"],
-        "treehugger":   ["npm", "https://github.com/ajaxorg/treehugger/tarball/6417527445915e5794e37849a1eeb8a9c6493a75"]
+        "treehugger":   ["npm", "https://github.com/ajaxorg/treehugger/tarball/6417527445915e5794e37849a1eeb8a9c6493a75"],
+        "gnu-tools":    ["npm", "https://github.com/c9/node-gnu-tools/tarball/7484b39ed9c12183865737a33d959b72c9494979"]
     },
 
     "repository" : {
