Option -w works fine now

--- a/plugins-server/cloud9.process-manager/package.json
+++ b/plugins-server/cloud9.process-manager/package.json
@@ -13,7 +13,8 @@
             "process-manager"
         ],
         "consumes": [
-            "eventbus"
+            "eventbus",
+            "ide"
         ]
     }
 }
