Refactor out IDE dependency of process-manager

--- a/plugins-server/cloud9.process-manager/package.json
+++ b/plugins-server/cloud9.process-manager/package.json
@@ -13,8 +13,7 @@
             "process-manager"
         ],
         "consumes": [
-            "eventbus",
-            "ide"
+            "eventbus"
         ]
     }
 }
