--- a/plugins-server/cloud9.run.node-debug/package.json
+++ b/plugins-server/cloud9.run.node-debug/package.json
@@ -15,7 +15,8 @@
         ],
         "consumes": [
             "process-manager",
-            "sandbox"
+            "sandbox",
+            "ide"
         ]
     }
 }
