Pack core and ext plugins

--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,11 @@ common/packager
 common/apf
 client/icons/Thumbs.db
 client/common
-client/build
+build/src
 .settings.xml
 .project
 .settings
 /demo
-/client/build
 .settings.xml.old
 .DS_Store
 /nbproject
