--- a/package.json
+++ b/package.json
@@ -24,7 +24,14 @@
         
         "optimist": "~0.3.1",
         
-        "mappings": "0.1.x"        
+        "mappings": "0.1.x",
+        "amd-loader": "~0.0.4"
+    },
+    
+    "devDependencies": {
+        "nodeunit": "~0.7.4",
+        "sinon": "~1.3.4",
+        "rimraf": "~2.0.1"
     },
 
     "mappings": {
