--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
     "name": "packager",
     "version": "0.1.0",
-    "private": true
+    "private": true,
+    "dependencies": {
+        "asyncjs": "~0.0.2"   
+    },
+    "mappings": {
+		"node-o3-xml":    ["npm", "https://github.com/ajaxorg/node-o3-xml/tarball/35ee5cdfbb872658bc3ce6d04f7f1759a7ad72f4"],
+        "node-o3-xml-v4": ["npm", "https://github.com/ajaxorg/node-o3-xml-v4/tarball/b0b5676e83b97d95b94b490001dde68eb0c0e053"]
+    }
 }
