* Renamed html plugin to preview * Preview plugin now works for all file types

--- a/plugins-client/ext.preview/package.json
+++ b/plugins-client/ext.preview/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "ext.html",
+    "name": "ext.preview",
     "version": "0.0.1",
-    "main": "html-ext.js",
+    "main": "preview-ext.js",
     "private": true,
     "plugin": {
         "provides": [
-            "ext.html"
+            "ext.preview"
         ],
         "consumes": [
             "client-plugins"
