--- a/package.json
+++ b/package.json
@@ -2,8 +2,5 @@
     "name": "apf",
     "version": "0.1.0",
     "private": true,
-    "main": "apf-node",
-    "dependencies": {
-        "libxml": "0.0.3"
-    }
+    "main": "apf"
 }
