--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
         "optimist": "~0.3.1",
         
         "mappings": "0.1.x",
-        "amd-loader": "~0.0.4"
+        "amd-loader": "~0.0.4",
+        "dryice": "0.4.2"
     },
     
     "devDependencies": {
