--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
 
         "mappings": "0.1.x",
         "amd-loader": "~0.0.4",
-        "async": "0.1.21"
+        "async": "0.1.21",
+        "netutil": "~0.0.1",
+        "connect-architect": "~0.0.1"
     },
 
     "devDependencies": {
@@ -42,8 +44,9 @@
         "asyncjs":      ["npm", "https://github.com/ajaxorg/async.js/tarball/0b4ed5608a32c280a7690b5f52883d8d1fc0de08"],
         "jsDAV":        ["npm", "https://github.com/ajaxorg/jsDAV/tarball/a702fad9f0e5fbabe8da351cc235b6e74a5ef7d0"],
         "v8debug":      ["npm", "https://github.com/ajaxorg/lib-v8debug/tarball/09ce2bef1c33add76ed5c52ce477df339101b435"],
-        "treehugger":   ["npm", "https://github.com/ajaxorg/treehugger/tarball/5d279d21e984dc621ff23ae77726ddd015880b7d"],
-        "packager":     ["npm", "https://github.com/ajaxorg/packager/tarball/0b1aaac94d21a10a8ee8117495a71f788ca01372"]
+        "treehugger":   ["npm", "https://github.com/ajaxorg/treehugger/tarball/c7ee419c6c985d4369d71619b8e97044de3e502e"],
+        "packager":     ["npm", "https://github.com/ajaxorg/packager/tarball/0b1aaac94d21a10a8ee8117495a71f788ca01372"],
+        "vfs":          ["npm", "https://github.com/c9/vfs/tarball/a48785071133a580417c47d253e9e7f21a2ad6c6"]
     },
 
     "repository" : {
