Disable postinstall, have to run manually afterwards (actually, after sm install would be best)

--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
     }],
 
     "scripts": {
-        "start": "sh ./bin/cloud9.sh",
-        "postinstall": "sh ./postinstall.sh"
+        "start": "sh ./bin/cloud9.sh"
     }
 }
