--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ node_modules/
 deps/ace/
 plugins-server/fixtures/node_env/hello.js
 npm-debug.log
+plugins-client/lib.apf/www/apf-packaged/apf_debug.js
