--- a/plugins-server/cloud9.run.node/package.json
+++ b/plugins-server/cloud9.run.node/package.json
@@ -11,7 +11,8 @@
         ],
         "consumes": [
             "process-manager",
-            "sandbox"
+            "vfs",
+            "ide"
         ]
     }
 }
