misc architect/dependency fixes for packed plugin

--- a/plugins-client/lib.packed/package.json
+++ b/plugins-client/lib.packed/package.json
@@ -4,7 +4,12 @@
     "main": "packed-plugin.js",
     "private": true,
     "plugin": {
-        "provides": [ ],
+        "provides": [
+            "client.apf",
+            "client.ace",
+            "client.treehugger",
+            "client.v8debug"
+        ],
         "consumes": [
             "static"
         ]
