Expanding OS modules with infra functionality

--- a/plugins-server/cloud9.run.node-debug/package.json
+++ b/plugins-server/cloud9.run.node-debug/package.json
@@ -15,8 +15,7 @@
         ],
         "consumes": [
             "process-manager",
-            "sandbox",
-            "ide"
+            "sandbox"
         ]
     }
 }
