--- a/plugins-server/cloud9.run.node/package.json
+++ b/plugins-server/cloud9.run.node/package.json
@@ -11,8 +11,7 @@
         ],
         "consumes": [
             "process-manager",
-            "sandbox",
-            "ide"
+            "sandbox"
         ]
     }
 }
