--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,10 @@ plugins/cloud9.client.v8debug/node_modules/
 plugins/cloud9.static/node_modules/
 plugins-server/cloud9.fs/node_modules/
 plugins-client/lib.packed/www/
+plugins-client/cloud9.core/www/js/
 node_modules/
 deps/ace/
 plugins-server/fixtures/node_env/hello.js
 npm-debug.log
 plugins-client/lib.apf/www/apf-packaged/apf_debug.js
+
