Cloud9 OS shouldnt use the custom node builds

--- a/plugins-server/cloud9.run.node-debug/package.json
+++ b/plugins-server/cloud9.run.node-debug/package.json
@@ -2,7 +2,7 @@
     "name": "cloud9.run.node-debug",
     "version": "0.0.1",
 
-    "main": "./node_debug.js",
+    "main": "./node_debug-plugin.js",
     "private": true,
 
     "dependencies": {
@@ -15,7 +15,8 @@
         ],
         "consumes": [
             "process-manager",
-            "sandbox"
+            "sandbox",
+            "run-node"
         ]
     }
 }
