depend on sandbox iso ide

--- a/plugins-server/cloud9.run.node-debug/package.json
+++ b/plugins-server/cloud9.run.node-debug/package.json
@@ -17,7 +17,7 @@
             "process-manager",
             "run-node",
             "vfs",
-            "ide"
+            "sandbox"
         ]
     }
 }
