--- a/plugins-server/cloud9.run.node/package.json
+++ b/plugins-server/cloud9.run.node/package.json
@@ -12,7 +12,7 @@
         "consumes": [
             "process-manager",
             "vfs",
-            "ide"
+            "sandbox"
         ]
     }
 }
