use vfs instead of node's fs module

--- a/plugins-server/cloud9.ide.run-npm-module/package.json
+++ b/plugins-server/cloud9.ide.run-npm-module/package.json
@@ -12,7 +12,7 @@
             "run-node",
             "ide.ext.state",
             "eventbus",
-            "sandbox.fs"
+            "vfs"
         ]
     }
 }
