--- a/plugins-client/lib.packed/package.json
+++ b/plugins-client/lib.packed/package.json
@@ -4,12 +4,7 @@
     "main": "packed-plugin.js",
     "private": true,
     "plugin": {
-        "provides": [
-            "client.apf",
-            "client.ace",
-            "client.treehugger",
-            "client.v8debug"
-        ],
+        "provides": [],
         "consumes": [
             "static"
         ]
