--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     }],
 
     "scripts": {
-        "start": "sh ./bin/cloud9.sh"
+        "start": "sh ./bin/cloud9.sh",
+        "buildDebug": "node ./scripts/debug",
+        "buildPacked": "node ./scripts/packed"
     }
 }
