Add javadebug library dependency to jvm-debug plugin

--- a/plugins-server/cloud9.run.jvm-debug/package.json
+++ b/plugins-server/cloud9.run.jvm-debug/package.json
@@ -6,7 +6,8 @@
     "private": true,
 
     "dependencies": {
-        "v8debug": "0.0.x"
+        "v8debug": "0.0.x",
+        "javadebug": "0.0.x"
     },
 
     "plugin": {
