Update run npm to not use fs directly anymore

--- a/plugins-server/cloud9.ide.run-npm-module/package.json
+++ b/plugins-server/cloud9.ide.run-npm-module/package.json
@@ -11,7 +11,8 @@
             "process-manager",
             "run-node",
             "ide.ext.state",
-            "eventbus"
+            "eventbus",
+            "sandbox.fs"
         ]
     }
 }
