--- a/package.json
+++ b/package.json
@@ -1,59 +1,82 @@
 {
     "name": "cloud9",
     "description": "Cloud9 IDE",
-    "version": "0.7.0",
-    "homepage" : "http://github.com/ajaxorg/cloud9",
-    "engines": {"node": ">= 0.6.15"},
+    "version": "0.7.1",
+    "homepage": "http://github.com/ajaxorg/cloud9",
+    "engines": {
+        "node": ">= 0.6.15"
+    },
     "author": "Ajax.org B.V. <info@ajax.org>",
     "help": {
         "web": "https://github.com/ajaxorg/cloud9/blob/master/README.md",
         "cli": "./scripts/help.js"
     },
-
     "pm": "sm",
     "dependencies": {
         "socket.io": "0.9.x",
         "socket.io-client": "0.9.x",
-
         "sourcemint-loader-js": "0.x",
         "sourcemint-platform-nodejs": "0.x",
         "http-error": "~0.0.1",
         "simple-template": "~0.0.1",
-
         "optimist": "~0.3.1",
         "dryice": "0.4.2",
-
         "mappings": "0.1.x",
         "amd-loader": "~0.0.4"
     },
-
     "devDependencies": {
         "nodeunit": "~0.7.4",
         "sinon": "~1.3.4",
         "rimraf": "~2.0.1"
     },
-
     "mappings": {
-        "connect":      ["npm", "https://github.com/ajaxorg/connect/tarball/cf3b4b2bd18579aa915759d7860061d83c5d0c57"],
-        "ace":          ["npm", "https://github.com/ajaxorg/ace/tarball/7d89ecf82f372df0a824df4f9be645e18b1220e4"],
-        "apf":          ["npm", "https://github.com/ajaxorg/apf/tarball/0f7f497815b49472bb2865934ac6c71d15dcf126"],
-        "architect":    ["npm", "https://github.com/c9/architect/tarball/6a7069e6d1b65a515af73d1dd92757da33bfc2a9"],
-        "asyncjs":      ["npm", "https://github.com/ajaxorg/async.js/tarball/0b4ed5608a32c280a7690b5f52883d8d1fc0de08"],
-        "jsDAV":        ["npm", "https://github.com/ajaxorg/jsDAV/tarball/a702fad9f0e5fbabe8da351cc235b6e74a5ef7d0"],
-        "v8debug":      ["npm", "https://github.com/ajaxorg/lib-v8debug/tarball/09ce2bef1c33add76ed5c52ce477df339101b435"],
-        "treehugger":   ["npm", "https://github.com/ajaxorg/treehugger/tarball/c7ee419c6c985d4369d71619b8e97044de3e502e"],
-        "packager":     ["npm", "https://github.com/ajaxorg/packager/tarball/0b1aaac94d21a10a8ee8117495a71f788ca01372"]
+        "connect": [
+            "npm",
+            "https://github.com/ajaxorg/connect/tarball/cf3b4b2bd18579aa915759d7860061d83c5d0c57"
+        ],
+        "ace": [
+            "npm",
+            "https://github.com/ajaxorg/ace/tarball/7d89ecf82f372df0a824df4f9be645e18b1220e4"
+        ],
+        "apf": [
+            "npm",
+            "https://github.com/ajaxorg/apf/tarball/0f7f497815b49472bb2865934ac6c71d15dcf126"
+        ],
+        "architect": [
+            "npm",
+            "https://github.com/c9/architect/tarball/6a7069e6d1b65a515af73d1dd92757da33bfc2a9"
+        ],
+        "asyncjs": [
+            "npm",
+            "https://github.com/ajaxorg/async.js/tarball/0b4ed5608a32c280a7690b5f52883d8d1fc0de08"
+        ],
+        "jsDAV": [
+            "npm",
+            "https://github.com/ajaxorg/jsDAV/tarball/a702fad9f0e5fbabe8da351cc235b6e74a5ef7d0"
+        ],
+        "v8debug": [
+            "npm",
+            "https://github.com/ajaxorg/lib-v8debug/tarball/09ce2bef1c33add76ed5c52ce477df339101b435"
+        ],
+        "treehugger": [
+            "npm",
+            "https://github.com/ajaxorg/treehugger/tarball/c7ee419c6c985d4369d71619b8e97044de3e502e"
+        ],
+        "packager": [
+            "npm",
+            "https://github.com/ajaxorg/packager/tarball/0b1aaac94d21a10a8ee8117495a71f788ca01372"
+        ]
     },
-
-    "repository" : {
-        "type" : "git",
-         "url" : "git://github.com/ajaxorg/cloud9.git"
+    "repository": {
+        "type": "git",
+        "url": "git://github.com/ajaxorg/cloud9.git"
     },
-    "licenses": [{
-        "type": "GPLv3",
-        "url": "http://www.gnu.org/licenses/gpl-3.0.txt"
-    }],
-
+    "licenses": [
+        {
+            "type": "GPLv3",
+            "url": "http://www.gnu.org/licenses/gpl-3.0.txt"
+        }
+    ],
     "scripts": {
         "start": "sh ./bin/cloud9.sh",
         "build-debug": "node ./scripts/build-debug",
