--- a/.gitignore
+++ b/.gitignore
@@ -38,4 +38,4 @@ deps/ace/
 plugins-server/fixtures/node_env/hello.js
 npm-debug.log
 plugins-client/lib.apf/www/apf-packaged/apf_debug.js
-
+.sessions/
