fix merge with beta2

--- a/plugins-server/cloud9.ide.revisions/package.json
+++ b/plugins-server/cloud9.ide.revisions/package.json
@@ -8,7 +8,8 @@
     "plugin": {
         "consumes": [
             "ide",
-            "sandbox.fs"
+            "sandbox",
+            "vfs"
         ]
     }
 }
