--- a/package.json
+++ b/package.json
@@ -15,20 +15,20 @@
         "socket.io": "0.9.x",
         "socket.io-client": "0.9.x",
         "connect": "1.8.x",
-
+        
         "sourcemint-loader-js": "0.x",
         "sourcemint-platform-nodejs": "0.x",
         "http-error": "~0.0.1",
         "simple-template": "~0.0.1",
-
+        
         "optimist": "~0.3.1",
         "dryice": "0.4.2",
-
+        
         "mappings": "0.1.x",
         "amd-loader": "~0.0.4",
         "async": "0.1.21"
     },
-
+    
     "devDependencies": {
         "nodeunit": "~0.7.4",
         "sinon": "~1.3.4",
@@ -36,8 +36,9 @@
     },
 
     "mappings": {
-        "ace":          ["npm", "https://github.com/ajaxorg/ace/tarball/dbab677c413aec097bf2e7f95a9e245a4526ce88"],
+        "connect":      ["npm", "https://github.com/ajaxorg/connect/tarball/cf3b4b2bd18579aa915759d7860061d83c5d0c57"],
         "apf":          ["npm", "https://github.com/ajaxorg/apf/tarball/0f7f497815b49472bb2865934ac6c71d15dcf126"],
+        "ace":          ["npm", "https://github.com/ajaxorg/ace/tarball/dbab677c413aec097bf2e7f95a9e245a4526ce88"],
         "architect":    ["npm", "https://github.com/c9/architect/tarball/6a7069e6d1b65a515af73d1dd92757da33bfc2a9"],
         "asyncjs":      ["npm", "https://github.com/ajaxorg/async.js/tarball/0b4ed5608a32c280a7690b5f52883d8d1fc0de08"],
         "jsDAV":        ["npm", "https://github.com/ajaxorg/jsDAV/tarball/a702fad9f0e5fbabe8da351cc235b6e74a5ef7d0"],
