--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
         "v8debug":      ["npm", "https://github.com/ajaxorg/lib-v8debug/tarball/09ce2bef1c33add76ed5c52ce477df339101b435"],
         "packager":     ["npm", "https://github.com/ajaxorg/packager/tarball/ae07ff93310d1625c48119e98141bbe5b2c26200"],
         "vfs":          ["npm", "https://github.com/c9/vfs/tarball/be43f8b32f9b1c69923dd85ec9be7eb6836bbb29"],
-        "vfs-architect":["npm", "https://github.com/c9/vfs-architect/tarball/1069a644c7560245dde01bd5c3a4c7e0e9ce8c10"]
-        "treehugger":   ["npm", "https://github.com/ajaxorg/treehugger/tarball/1fc26f6855be18e46af260e9c2244924c051878e"],
+        "vfs-architect":["npm", "https://github.com/c9/vfs-architect/tarball/1069a644c7560245dde01bd5c3a4c7e0e9ce8c10"],
+        "treehugger":   ["npm", "https://github.com/ajaxorg/treehugger/tarball/1fc26f6855be18e46af260e9c2244924c051878e"]
     },
 
     "repository" : {
