--- a/plugins-server/cloud9.ide.settings/package.json
+++ b/plugins-server/cloud9.ide.settings/package.json
@@ -7,7 +7,8 @@
     "plugin": {
         "consumes": [
             "ide",
-            "vfs"
+            "vfs",
+            "sandbox"
         ]
     }
 }
