Added runner for python and ruby

--- a/plugins-server/cloud9.ide.run-ruby/package.json
+++ b/plugins-server/cloud9.ide.run-ruby/package.json
@@ -1,15 +1,15 @@
 {
-    "name": "cloud9.ide.run-python",
+    "name": "cloud9.ide.run-ruby",
     "version": "0.0.1",
 
-    "main": "./run-python.js",
+    "main": "./run-ruby.js",
     "private": true,
 
     "plugin": {
         "consumes": [
             "ide",
             "process-manager",
-            "run-python",
+            "run-ruby",
             "ide.ext.state",
             "eventbus"
         ]
