fixes for the ruby/php/python runners
still broken

--- a/plugins-server/cloud9.ide.run-php/package.json
+++ b/plugins-server/cloud9.ide.run-php/package.json
@@ -9,8 +9,7 @@
         "consumes": [
             "ide",
             "process-manager",
-            "run-node",
-            "run-node-debug",
+            "run-php",
             "ide.ext.state",
             "eventbus"
         ]
