--- a/package.json
+++ b/package.json
@@ -41,12 +41,12 @@
         "architect":    ["npm", "https://github.com/c9/architect/tarball/6a7069e6d1b65a515af73d1dd92757da33bfc2a9"],
         "asyncjs":      ["npm", "https://github.com/ajaxorg/async.js/tarball/0b4ed5608a32c280a7690b5f52883d8d1fc0de08"],
         "jsDAV":        ["npm", "https://github.com/ajaxorg/jsDAV/tarball/7fc5b36a5074668f40aad8b45f82a6fbbec04c88"],
-        "v8debug":      ["npm", "https://github.com/ajaxorg/lib-v8debug/tarball/f06d2074f60366a544aedd5dfa8100321c15b565"],
+        "v8debug":      ["npm", "https://github.com/ajaxorg/lib-v8debug/tarball/95c01e80688067ccb87b12f87c2ee8c3528d415c"],
         "treehugger":   ["npm", "https://github.com/ajaxorg/treehugger/tarball/5d279d21e984dc621ff23ae77726ddd015880b7d"],
         "packager":     ["npm", "https://github.com/ajaxorg/packager/tarball/ae07ff93310d1625c48119e98141bbe5b2c26200"],
         "jvm_features": ["npm", "git@github.com:ajaxorg/jvm_features.git#e1d6748af3aca3589ce99db6f147ee06381007d4"],
         "jvm-run":      ["npm", "git@github.com:ajaxorg/javarunvm.git#f009b612421d5c3a6f1edf936a91dac8258201ba"],
-        "javadebug":    ["npm", "git@github.com:ajaxorg/lib-javadebug.git#352f09f87f3f50902d1d4f1ea40bfcefee2d8d75"],
+        "javadebug":    ["npm", "git@github.com:ajaxorg/lib-javadebug.git#352f09f87f3f50902d1d4f1ea40bfcefee2d8d75"]
     },
 
     "repository" : {
