--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "pm": "sm",
     "dependencies": {
         "socket.io": "0.9.x",
-        "socket.io-client": "0.9.x",
         "connect": "1.8.x",
 
         "sourcemint-loader-js": "0.x",
@@ -41,15 +40,16 @@
     },
 
     "mappings": {
-        "ace":          ["npm", "https://github.com/ajaxorg/ace/tarball/21d8ed2fd35f036f1d6ed626a99e73687dbf9f39"],
-        "apf":          ["npm", "https://github.com/ajaxorg/apf/tarball/9be8fc55dce02ea3018f8f39302af55409e20221"],
-        "asyncjs":      ["npm", "https://github.com/ajaxorg/async.js/tarball/0b4ed5608a32c280a7690b5f52883d8d1fc0de08"],
-        "jsDAV":        ["npm", "https://github.com/ajaxorg/jsDAV/tarball/7fc5b36a5074668f40aad8b45f82a6fbbec04c88"],
-        "v8debug":      ["npm", "https://github.com/ajaxorg/lib-v8debug/tarball/d2fac9b09724cb2e75e2807191eace9bc27d3b52"],
-        "packager":     ["npm", "https://github.com/ajaxorg/packager/tarball/ae07ff93310d1625c48119e98141bbe5b2c26200"],
-        "vfs":          ["npm", "https://github.com/c9/vfs/tarball/be43f8b32f9b1c69923dd85ec9be7eb6836bbb29"],
-        "vfs-architect":["npm", "https://github.com/c9/vfs-architect/tarball/43bd19b9e7b2ddb95bdc1116143ce7fb22c6a5d3"],
-        "treehugger":   ["npm", "https://github.com/ajaxorg/treehugger/tarball/cb8fd0483417ac6ffb8532b994d23dbf13ad9022"]
+        "ace":                 ["npm", "https://github.com/ajaxorg/ace/tarball/21d8ed2fd35f036f1d6ed626a99e73687dbf9f39"],
+        "apf":                 ["npm", "https://github.com/ajaxorg/apf/tarball/9be8fc55dce02ea3018f8f39302af55409e20221"],
+        "asyncjs":             ["npm", "https://github.com/ajaxorg/async.js/tarball/0b4ed5608a32c280a7690b5f52883d8d1fc0de08"],
+        "jsDAV":               ["npm", "https://github.com/ajaxorg/jsDAV/tarball/7fc5b36a5074668f40aad8b45f82a6fbbec04c88"],
+        "v8debug":             ["npm", "https://github.com/ajaxorg/lib-v8debug/tarball/d2fac9b09724cb2e75e2807191eace9bc27d3b52"],
+        "packager":            ["npm", "https://github.com/ajaxorg/packager/tarball/ae07ff93310d1625c48119e98141bbe5b2c26200"],
+        "vfs":                 ["npm", "https://github.com/c9/vfs/tarball/be43f8b32f9b1c69923dd85ec9be7eb6836bbb29"],
+        "vfs-architect":       ["npm", "https://github.com/c9/vfs-architect/tarball/43bd19b9e7b2ddb95bdc1116143ce7fb22c6a5d3"],
+        "socket.io-client":    ["npm", "git@github.com:ajaxorg/socket.io-client.git#9d0c0631f390538134a7d1f841db2c72d79f8cb4"],
+        "treehugger":          ["npm", "https://github.com/ajaxorg/treehugger/tarball/cb8fd0483417ac6ffb8532b994d23dbf13ad9022"]
     },
 
     "repository" : {
