Adding vfs to jvm runners and debuggers

--- a/plugins-server/cloud9.run.jvm-debug/package.json
+++ b/plugins-server/cloud9.run.jvm-debug/package.json
@@ -17,6 +17,7 @@
         "consumes": [
             "process-manager",
             "sandbox",
+            "vfs",
             "run-jvm"
         ]
     }
