--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "nodeunit": "~0.7.4",
         "sinon": "~1.3.4",
         "rimraf": "~2.0.1",
-        "vfs-local": "~0.0.0",
+        "vfs-local": ">=0.1.x",
         "vfs-nodefs-adapter": "~0.0.1"
     },
 
@@ -51,7 +51,7 @@
         "treehugger":   ["npm", "https://github.com/ajaxorg/treehugger/tarball/cb8fd0483417ac6ffb8532b994d23dbf13ad9022"],
         "packager":     ["npm", "https://github.com/ajaxorg/packager/tarball/ae07ff93310d1625c48119e98141bbe5b2c26200"],
         "jvm_features": ["npm", "git@github.com:ajaxorg/jvm_features.git#e1d6748af3aca3589ce99db6f147ee06381007d4"],
-        "jvm-run":      ["npm", "git@github.com:ajaxorg/javarunvm.git#f009b612421d5c3a6f1edf936a91dac8258201ba"],
+        "jvm-run":      ["npm", "git@github.com:ajaxorg/javarunvm.git#08096259b10e15527304f3993460b3eb7e88b6e0"],
         "javadebug":    ["npm", "git@github.com:ajaxorg/lib-javadebug.git#352f09f87f3f50902d1d4f1ea40bfcefee2d8d75"]
     },
 
