Remove all ant build usages && Add Google app engine run support

--- a/plugins-server/cloud9.ide.jvm-features/package.json
+++ b/plugins-server/cloud9.ide.jvm-features/package.json
@@ -9,7 +9,8 @@
     "plugin": {
         "consumes": [
             "ide",
-            "sandbox"
+            "sandbox",
+            "eventbus"
         ]
     }
 }
