--- a/plugins-server/cloud9.ide.settings/package.json
+++ b/plugins-server/cloud9.ide.settings/package.json
@@ -6,8 +6,8 @@
 
     "plugin": {
         "consumes": [
-            "ide",
             "vfs",
+            "ide-routes",
             "sandbox"
         ]
     }
