--- a/package.json
+++ b/package.json
@@ -27,7 +27,12 @@
         "async": "0.1.21",
         "netutil": "0.0.1",
         "architect": "0.1.4",
-        "connect-architect": "0.0.3"
+        "connect-architect": "0.0.3",
+
+        "smith.io": "0.0.5",
+        "smith": "0.1.7",
+        "events": "0.5.0",
+        "engine.io-client": "0.2.0"
     },
 
     "devDependencies": {
@@ -48,8 +53,8 @@
         "vfs":          ["npm", "https://github.com/c9/vfs/tarball/be43f8b32f9b1c69923dd85ec9be7eb6836bbb29"],
         "vfs-architect":["npm", "https://github.com/c9/vfs-architect/tarball/43bd19b9e7b2ddb95bdc1116143ce7fb22c6a5d3"],
         "treehugger":   ["npm", "https://github.com/ajaxorg/treehugger/tarball/46f9d8ffdb159a2c206d41ed6ad877f471bb1e2f"],
-        "socket.io":    ["npm", "https://github.com/ajaxorg/socket.io/tarball/7aa252bab49e6bbc314dc2678b108b6e0876007a"],
-        "socket.io-client": ["npm", "https://github.com/ajaxorg/socket.io-client/tarball/35f0763ffcaa7ccc3c664460667577e77da82b10"]
+        "msgpack-js":   ["npm", "https://github.com/creationix/msgpack-js-browser/tarball/e6dc213cb602d5a8fb402520d7841d2664cd10e9"],
+        "extendables":  ["url", "https://raw.github.com/Gozala/extendables/v0.2.0/extendables.js"]
     },
 
     "repository" : {
