--- a/plugins-server/cloud9.ide.salesforce/package.json
+++ b/plugins-server/cloud9.ide.salesforce/package.json
@@ -10,7 +10,8 @@
             "ide",
             "process-manager",
             "run-shell",
-            "eventbus"
+            "eventbus",
+            "vfs"
         ]
     }
 }
