--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@
 Thumbs.db
 common/packager
 common/apf
-client/icons/Thumbs.db
 client/common
 build/src
 build/app.build.js
@@ -14,30 +13,12 @@ build/app.build.js
 /demo
 .settings.xml.old
 .DS_Store
-/nbproject
-aut.js
-helloworld.js
-.*.gz
 .c9revisions
-.c9search
 .architect/
 .sourcemint/
-/mapped_packages/
-plugins/cloud9.core/node_modules/
-plugins/cloud9.connect/node_modules/
-plugins/cloud9.ide.run-node/node_modules/
-plugins/cloud9.ide.shell/node_modules/
-plugins/cloud9.client.ace/node_modules/
-plugins/cloud9.client.treehugger/node_modules/
-plugins/cloud9.client.v8debug/node_modules/
-plugins/cloud9.static/node_modules/
-plugins-server/cloud9.fs/node_modules/
 plugins-client/lib.packed/www/
-plugins-client/lib.ace/www/worker/
-plugins-client/cloud9.core/www/js/
-plugins-client/ext.jsinfer
+plugins-client/lib.ace/www/
 node_modules/
-deps/ace/
 plugins-server/fixtures/node_env/hello.js
 npm-debug.log
 plugins-client/lib.apf/www/apf-packaged/apf_debug.js
